update recent jobs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.1/jquery.jgrowl.min.js"></script>
     <script>
         window.apiAddr = {
-            "host":"http://192.168.1.52",
+            "host":"https://192.168.1.52",
             "port":"9393"
         }
     </script>
